// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appConfiguration all 1`] = `
Object {
  "$dollarkey": "dollarkey value",
  ".leadingdot": ".leadingdot value",
  "coloned:key": "coloned:key value",
  "dotted.key": "dotted.key value",
  "key1": "key1 value",
  "key2": "key2 value",
  "key3": "key3 label3 value",
  "slash/separated/key": "slash/separated/key value",
  "underscored_key": "underscored_key value",
}
`;

exports[`appConfiguration key3 and label3 1`] = `
Object {
  "key3": "key3 label3 value",
}
`;

exports[`appConfiguration multiple key1,key2 1`] = `
Object {
  "key1": "key1 value",
  "key2": "key2 value",
}
`;

exports[`appConfiguration single key1 1`] = `
Object {
  "key1": "key1 value",
}
`;

exports[`appConfiguration single label2 1`] = `
Object {
  "key3": "key3 label2 value",
}
`;

exports[`appConfiguration wildcard key* 1`] = `
Object {
  "key1": "key1 value",
  "key2": "key2 value",
  "key3": "key3 label3 value",
}
`;

exports[`appConfiguration wildcard label* 1`] = `
Object {
  "key3": "key3 label3 value",
}
`;
